# graphiti

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  docker-compose.test-proxy.yml  docker-compose.yml  pyproject.toml  test_graphiti.py
backend/: Dockerfile  README.md  requirements.txt
backend/src/: config.py  main.py
client/: graphiti_client.py
data/exports/: visualize_incident_progression.py  visualize_temporal_recurrence.py
data/github/: issues_sig-org_graphiti_20261124_135016_en.json  issues_uniQorn-org_uniqorn-zoom_20251124_132255.json  issues_uniQorn-org_uniqorn-zoom_20251124_135016_en.json
data/slack/: messages_C09JQQMUHCZ_20251124_133219.json  messages_C09JQQMUHCZ_20251124_135055_en.json  slack_data_20251126_201735_en.json  test_single_message.json
data/zoom/: 3e2a9613-e2e9-4be9-bde1-7011c151c968_transcript.vtt  test_transcript.vtt
docs/: ARCHITECTURE.md  CC_THROTTLE_SETUP.md  DATA_INGESTION.md  FAQ.md  LOCAL_LLM_SETUP.md  METADATA_SPECIFICATION.md  PROXY_SETUP.md  SOURCE_URL_FLOW.md  graphiti.md
frontend/: Dockerfile  README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
server/docs/: REST_API.md
server/scripts/: README.md  translate_slack_data.py
server/slack_data/: threads_ordered.csv  threads_ordered_en.csv  users_used.csv
server/src/: README_SLACK_DATA_LOADER.md  analyze_relations.py  client_example.py  graphiti_mcp_server.py  ingest_github.py  ingest_github_old.py  ingest_github_original.py  ingest_slack.py  ingest_slack_old.py  ingest_slack_original.py  (+8 more)
tests/: test_graphiti.py
(+71 files in other folders)
