[project]
name = "graphiti-mcp"
version = "1.0.0"
description = "Graphiti MCP Server - Real-Time Knowledge Graph with Neo4j"
requires-python = ">=3.12"
dependencies = [
    "graphiti-core[falkordb]>=0.16.0",
    "mcp[cli]>=1.9.4",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.91.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.0.0",
    "pandas>=2.3.3",
    "tqdm>=4.67.1",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "boto3>=1.28.0",
    "PyGithub>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]